# magma_test

./: CMakeLists.txt  main.cpp
cmake/: FindMKL.cmake  SourcesTree.cmake
